[package]
name = "rename_to_pb"
version = "0.1.0"
edition = "2021"
author = "Johann Homonnai <j.homonnai@icloud.com>"
about = "Rename files according to pattern"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
regex = "1.8.1"
walkdir = "2.3.3"
